java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/Incorrect.implicit.class.name.java
<error descr="The file name of a compact source file is not a valid identifier">void main() {}</error>